--- a/sample.toml
+++ b/sample.toml
@@ -15,3 +15,13 @@ name = "users"
 		age: u16,
 		email: String,
 	}"""
+
+
+	[[groups.endpoints]]
+	route = "/find/all"
+	http_verb = "Get"
+	success_code = 200
+	return_model = """\
+	struct UserResponseList {
+		users: Vec<UserResponse>,
+	}"""
