added new field to the  struct (and toml) for the method name. Finished the method signature impl.

--- a/sample.toml
+++ b/sample.toml
@@ -6,6 +6,7 @@ name = "users"
 
 	[[groups.endpoints]]
 	route = "/find"
+	name = "find_user_by_id"
 	http_verb = "Get"
 	query_param = {name = "user_id", field_type = "String"}
 	success_code = 200
@@ -19,6 +20,7 @@ name = "users"
 
 	[[groups.endpoints]]
 	route = "/find/all"
+	name = "find_all_users"
 	http_verb = "Get"
 	success_code = 200
 	return_model = """\
