refactored the  mod to be much more abstract when called and in turn able to take more data related to config and db management

--- a/sample.toml
+++ b/sample.toml
@@ -1,8 +1,10 @@
 title = "API Title"
 version = "V0.1"
+db_uri = "mongodb://127.0.0.1:27017/"
 
 [[groups]]
 name = "users"
+collection_name = "users"
 
 	[[groups.endpoints]]
 	route = "/find"
