--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,6 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Run linet
-      run: cargo clippy
+    - name: Run linter (Clippy)
+      run: cargo clippy -- -D warnings
 
